# Eclipsed-Engine

./: .gitignore  CMakeLists.txt  README.md  clean.bat  generate-engine.bat  output.txt  setup-project.bat
Eclipse-Source/: CMakeLists.txt
Eclipse-Source/Assets/DLLs/: steam_appid.txt
Eclipse-Source/Source/Engine/EclipsedEngine/: CMakeLists.txt
Eclipse-Source/Source/Engine/EclipsedEngine/EclipsedEngine/: DebugDrawer.h  EclipsedRuntime.cpp  EclipsedRuntime.h
Eclipse-Source/Source/Engine/EclipsedEngine/EclipsedEngine/Components/: AudioSource.cpp  AudioSource.h  ComponentForcelink.cpp  PlayerSpawner.h  Transform2D.cpp  Transform2D.h
Eclipse-Source/Source/Engine/EclipsedEngine/EclipsedEngine/Components/Audio/: AudioBank.cpp  AudioEmitter.cpp  AudioEmitter.h  AudioListener.cpp  AudioListener.h
Eclipse-Source/Source/Engine/EclipsedEngine/EclipsedEngine/Components/Physics/: BoxCollider.cpp  CircleCollider2D.cpp  Collider2D.cpp  PolygonCollider2D.cpp  RigidBody2D.cpp  RigidBody2D.h
Eclipse-Source/Source/Engine/EclipsedEngine/EclipsedEngine/Components/Rendering/: BaseRenderComponent.h  Camera.cpp  Camera.h  SpriteRenderer2D.cpp  SpriteRenderer2D.h
Eclipse-Source/Source/Engine/EclipsedEngine/EclipsedEngine/Components/UI/: BaseUI.h  Button.cpp  Button.h  Canvas.cpp  Canvas.h  RectTransform.cpp  RectTransform.h  TextRenderer.cpp  TextRenderer.h  UIImage.cpp  UIImage.h
Eclipse-Source/Source/Engine/EclipsedEngine/EclipsedEngine/ECS/: SpawnObject.cpp  SpawnObject.h
Eclipse-Source/Source/Engine/EclipsedEngine/EclipsedEngine/Editor/: EditorApplication.cpp  EditorApplication.h  EditorContext.cpp  EditorRuntime.cpp  EditorRuntime.h  EditorUIManager.cpp
Eclipse-Source/Source/Engine/EclipsedEngine/EclipsedEngine/Editor/Common/: EditorActions.cpp  TextureIconManager.h
Eclipse-Source/Source/Engine/EclipsedEngine/EclipsedEngine/Input/: Input.cpp  Input.h  InputMap.h  InputMapper.h
Eclipse-Source/Source/Engine/EclipsedEngine/EclipsedEngine/Reflection/: AbstractSerializedVariable.cpp  AbstractSerializedVariable.h  SerializedVariable.inl
Eclipse-Source/Source/Engine/EclipsedEngine/EclipsedEngine/Replication/: ReplicatedVariable.cpp  Replication.cpp  ReplicationManager.cpp  ReplicationManager.h
Eclipse-Source/Source/Engine/EclipsedEngine/EclipsedEngine/Scenes/: SceneLoader.cpp  SceneLoader.h  SceneManager.cpp
Eclipse-Source/Source/Engine/EclipsedEngine/EclipsedEngine/Steam/: SteamGeneral.cpp  SteamGeneral.h
Eclipse-Source/Source/Engine/EclipsedEngine/EclipsedEngine/SubSystem/: SubSystem.h
Eclipse-Source/Source/Engine/Modules/AssetEngine/: CMakeLists.txt
Eclipse-Source/Source/Engine/Modules/AssetEngine/AssetEngine/: Resources.cpp  Resources.h
Eclipse-Source/Source/Engine/Modules/AudioEngine/AudioEngine/: AudioManager.cpp  AudioManager.h  PcmData.h
Eclipse-Source/Source/Engine/Modules/CoreEngine/: pch.h
Eclipse-Source/Source/Engine/Modules/CoreEngine/CoreEngine/: Engine.cpp  FontData.h  MainSingleton.h  MainSingleton.inl  PathManager.cpp  PathManager.h
Eclipse-Source/Source/Engine/Modules/EntityEngine/EntityEngine/: Component.h  ComponentManager.cpp  ComponentManager.h  ComponentManager.inl  GameObject.cpp  GameObject.h
Eclipse-Source/Source/Engine/Modules/GraphicsEngine/GraphicsEngine/: GraphicsEngine.h
Eclipse-Source/Source/Engine/Modules/NetworkEngine/: CMakeLists.txt
Eclipse-Source/Source/Engine/Modules/PhysicsEngine/PhysicsEngine/: EditorPhysicsEngine.cpp  PhysicsEngine.cpp  PhysicsEngine.h  PhysicsEngineSettings.h  PhysicsObjectModifiers.cpp  PhysicsObjects.cpp
Eclipse-Source/Source/Hub/: main.cpp
Eclipse-Source/Source/Launcher/: CMakeLists.txt  main.cpp
Eclipse-Source/Source/Tools/EclipsedHub/: CMakeLists.txt  main.cpp
Eclipse-Source/Tools/CMake/: common.cmake
Source/Engine/EclipsedEngine/: CMakeLists.txt
Source/Engine/EclipsedEngine/EclipsedEngine/: EclipsedRuntime.cpp
Source/Engine/EclipsedEngine/EclipsedEngine/Components/: PlayerSpawner.h  Transform2D.h
Source/Engine/EclipsedEngine/EclipsedEngine/Components/Audio/: AudioBank.h  AudioEmitter.cpp  AudioEmitter.h  AudioListener.cpp
Source/Engine/EclipsedEngine/EclipsedEngine/Components/Physics/: CapsuleCollider2D.cpp  Collider2D.cpp  Collider2D.h  RigidBody2D.cpp
Source/Engine/EclipsedEngine/EclipsedEngine/Components/Rendering/: Camera.cpp  SpriteRenderer2D.cpp  SpriteRenderer2D.h  SpriteSheetAnimator2D.cpp
Source/Engine/EclipsedEngine/EclipsedEngine/Components/UI/: Canvas.h  TextRenderer.cpp  TextRenderer.h  UIImage.cpp  UIImage.h
Source/Engine/EclipsedEngine/EclipsedEngine/ECS/: ObjectManager.cpp  ObjectManager.h  SpawnObject.cpp  SpawnObject.h
Source/Engine/EclipsedEngine/EclipsedEngine/Editor/: EditorApplication.cpp  EditorApplication.h  EditorContext.cpp  EditorRuntime.cpp
Source/Engine/EclipsedEngine/EclipsedEngine/Editor/Common/: DragAndDrop.h  EditorActions.cpp  EditorActions.h  TextureIconManager.cpp
Source/Engine/EclipsedEngine/EclipsedEngine/Editor/Game/: GameCompiler.cpp  GameLoader.h
Source/Engine/EclipsedEngine/EclipsedEngine/Editor/Windows/: AbstractContextMenu.cpp  EditorFields.inl  WindowManager.cpp
Source/Engine/EclipsedEngine/EclipsedEngine/Input/: Input.h  InputAction.cpp  InputAction.h  InputMapper.cpp
Source/Engine/EclipsedEngine/EclipsedEngine/Reflection/: AbstractSerializedVariable.cpp  SerializedVariable.inl
Source/Engine/EclipsedEngine/EclipsedEngine/Reflection/Registry/: ComponentRegistry.h
Source/Engine/EclipsedEngine/EclipsedEngine/Replication/: ReplicatedVariable.inl  Replication.cpp  Replication.h  ReplicationManager.cpp  ReplicationManager.h
Source/Engine/EclipsedEngine/EclipsedEngine/Scenes/: SceneLoader.cpp  SceneManager.h
Source/Engine/EclipsedEngine/EclipsedEngine/SubSystem/: SubSystemManager.h
Source/Engine/Modules/NetworkEngine/: CMakeLists.txt
Source/Engine/Modules/NetworkEngine/NetworkEngine/Client/: SteamP2PNetworkingClient.h
Source/Engine/Modules/NetworkEngine/NetworkEngine/Server/: Server.h  SteamP2PNetworkingServer.h
Source/Hub/: CMakeLists.txt  ProjectData.h  main.cpp
Tools/: 1-Setup-project.bat  Test.bat  (+8 more)
(+287 files in other folders)
